# plugin-bridge-helper

./: .gitignore  CMakeLists.txt  README.md
ConsoleApplication1/: AVDemuxer.cpp  AVDemuxer.h  ByteQueue.cpp  ByteQueue.h  Common.cpp  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Resampler.cpp  Resampler.h
PipeSDK_FFmpeg/: PipeDef.h
PipeSDK_FFmpeg/lib/win32/: PipeSDK.lib  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
PipeSDK_FFmpeg/lib/x64/: PipeSDK.lib
config/: config.example.json
samples/: sample-config.json
src/: main.cpp
src/args/: launch_args.cpp  launch_args.h
src/bridge/: envelope.cpp  envelope.h  ws_publisher.cpp  ws_publisher.h
src/config/: app_config.cpp  app_config.h
src/events/: event_mapper.cpp  event_mapper.h  event_parser.cpp  event_parser.h  event_types.h  official_message_parser.cpp  official_message_parser.h
src/logging/: logger.cpp  logger.h
src/model/: live_event.cpp  live_event.h
src/pipe/: pipe_client.cpp  pipe_client.h  request_client.cpp  request_client.h
src/util/: time_util.cpp  time_util.h  uuid.cpp  uuid.h
tests/: test_main.cpp
